# aria

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  aria.config.example.cloud.json  aria.config.example.json  aria.config.example.onprem.json  docker-compose.override.yml.example  docker-compose.yml  langgraph.json  pyproject.toml
deploy/: aria.service
docs/: capabilities.md  deploy-linux.md  deploy-windows.md  secrets.md  tailscale.md
plans/: architecture.md  roadmap.md
src/aria/: agent.py  cli.py  config.py  graph.py  models.py  serve.py
src/aria/personas/: analyst.md  browse.md  default.md
src/smb_agent/: agent.py  cli.py
tests/: test_agent.py  test_config.py
