[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria"
version = "0.1.0"
description = "General-purpose AI task agent with MCP tool integrations"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "anthropic>=0.102.0",
    "python-dotenv>=1.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.scripts]
aria = "aria.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aria"]
